# key-django

./: README.md  pyproject.toml
devops/: stack-dev.yaml
iam/config/: settings.py  urls.py
iam/templates/admin/: base.html  base_site.html
iam/templates/ui/breadcrumbs/: breadcrumbs.html
iam/templates/ui/header/: branding.html  header.html
iam/tests/fixture/: __init__.py  fixture_client.py  fixture_create_user.py
iam/users/admin/: __init__.py  user_admin.py
iam/users/admin/tests/: conftest.py  test_user_admin.py
iam/users/migrations/: 0001_initial.py
iam/users/models/: __init__.py  models.py
theme/static_src/: .gitignore  package-lock.json  tailwind.config.js
