[tool.poetry]
name = "key-django"
version = "0.1.0"
description = "Provedor Oauth2 usando django"
authors = ["Jonathan W."]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-oauth-toolkit = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
