[tool.poetry]
name = "iam"
version = "0.1.0"
description = "Provedor Oauth2 usando django"
authors = ["Jonathan W."]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-oauth-toolkit = "^3.0.1"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
dev = 'python3 iam/manage.py runserver 0:8000'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
