[tool.poetry]
name = "iam"
version = "0.1.0"
description = "Provedor Oauth2 usando django"
authors = ["Jonathan W."]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
django-oauth-toolkit = "^3.0.1"
taskipy = "^1.14.1"
ruff = "^0.9.6"
pytest-env = "^1.1.5"
pytest-django = "^4.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["E", "F", "W", "S"]
extend-select = ["E501", "N"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["RUF012", "D101", "E501"]
"settings.py" = ["E501"]

[tool.taskipy.tasks]
dev = 'python3 iam/manage.py runserver 0:8000'
lint = 'ruff check ./iam; ruff check . --diff'
test = 'pytest -s -x -v iam/'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
